Video Screen - **ONLY FOR EMERGENCY POSTS Are we able to make this screen only allow videos to be taken in the case of emergencies?

--- a/PostSafety/PostSafety/Storyboards/Dashboard.storyboard
+++ b/PostSafety/PostSafety/Storyboards/Dashboard.storyboard
@@ -541,6 +541,7 @@
                         <outlet property="captureButton" destination="4sD-44-2QB" id="wIz-NC-ow8"/>
                         <outlet property="flashButton" destination="HEn-Tg-E18" id="jgh-RZ-pdM"/>
                         <outlet property="flipCameraButton" destination="3uG-BI-bgp" id="ffc-dg-1v3"/>
+                        <outlet property="photoVideoLabel" destination="hH6-ea-whc" id="eiz-Bh-JuQ"/>
                         <outlet property="progressView" destination="jUU-wb-sBC" id="MPo-yl-goA"/>
                         <outlet property="timeLabel" destination="sqI-mT-qOC" id="qLI-a0-6hh"/>
                     </connections>
